Add image to photos section in index.html
Added an image of Chacounette to the photos section.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
   <div id="photos" class="section active">
     <h2>Photos de Chacounette</h2>
-    <p>Ici tu pourras ajouter les photos de Chacounette.</p>
-  </div>
+    <img src="D4050099-3DC6-4F4D-8454-06388CCC0060.jpeg" width="300">
+
 
   <div id="journal" class="section">
     <h2>Journal du Groupe Chacounette</h2>
