--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="journal" class="section">
     <h2>Journal du Groupe Chacounette</h2>
     <p>Voici le journal en PDF :</p>
-    <a href="journal.pdf" target="_blank">📄 Ouvrir le journal</a>
+    <a href="Journal du Groupe Chacounette 11/08/2025.pdf" target="_blank">📄 Ouvrir le journal</a>
   </div>
 
   <div id="actus" class="section">
