--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   <div id="journal" class="section">
     <h2>Journal du Groupe Chacounette</h2>
     <p>Voici le journal en PDF :</p>
-    <a href="journal.pdf" target="_blank">📄 Ouvrir le journal</a>
+    <a href="journal.pdf" download>📥 Télécharger le journal</a>
+
   </div>
 
   <div id="actus" class="section">
