--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <img src="D4050099-3DC6-4F4D-8454-06388CCC0060.jpeg" width="300">
 
 
-  <div id="journal.pdf" class="section">
+  <div id="journal" class="section">
     <h2>Journal du Groupe Chacounette</h2>
     <p>Voici le journal en PDF :</p>
     <a href="journal.pdf" target="_blank">📄 Ouvrir le journal</a>
