Update news paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
   <div id="actus" class="section">
     <h2>Actualité</h2>
-    <p>Les dernières nouvelles du groupe.</p>
+    <p>Oyé oyé.
+      La Reine Mme Chacounette IIII décrète que le 8 décembre des bougis seront allumés aux fênetres.
+      Vives les croquettes !</p>
   </div>
 
   <script>
