--- a/index.html
+++ b/index.html
@@ -46,37 +46,31 @@
 
   <nav>
     <a href="#" onclick="showSection('photos')">Photos de Chacounette</a>
+    <a href="#" onclick="showSection('musique')">Musique 🎵</a>
     <a href="#" onclick="showSection('actus')">Actualité</a>
-    <button onclick="showSection('musique')">Musique 🎵</button>
-
   </nav>
 
   <div id="photos" class="section active">
     <h2>Photos de Chacounette</h2>
-    <img src="P1050896.jpeg" width="300">
-<img src="D4050099-3DC6-4F4D-8454-06388CCC0060.jpeg" width="300">
+    <img src="D4050099-3DC6-4F4D-8454-06388CCC0060.jpeg" width="300">
     <img src="IMG_0038.jpeg" width="300">
-     <img src="IMG_0026.jpeg" width="300">
-     <img src="IMG_0031.jpeg" width="300">
+    <img src="IMG_0026.jpeg" width="300">
+    <img src="IMG_0031.jpeg" width="300">
     <img src="IMG_0037.jpeg" width="300">
-<div id="musique" class="section">
-  <h2>Musique de Chacounette</h2>
-  <p>Écoute ici les musiques de Chacounette :</p>
+  </div>
 
-  <!-- Exemple d’intégration d’un fichier audio -->
-  <audio controls>
-    <source src="chacounette.mp3" type="audio/mpeg">
-    Ton navigateur ne supporte pas l'audio.
-  </audio>
-<div>
-
+  <div id="musique" class="section">
+    <h2>Musique de Chacounette</h2>
+    <p>Écoute ici les musiques de Chacounette :</p>
+    <audio controls>
+      <source src="chacounette.mp3" type="audio/mpeg">
+      Ton navigateur ne supporte pas l'audio.
+    </audio>
   </div>
 
   <div id="actus" class="section">
     <h2>Actualité</h2>
-    <p>Oyé oyé.
-      La Reine Mme Chacounette IIII décrète que le 8 décembre des bougis seront allumés aux fênetres.
-      Vives les croquettes !</p>
+    <p>Les dernières nouvelles du groupe.</p>
   </div>
 
   <script>
