--- a/index.html
+++ b/index.html
@@ -10,52 +10,112 @@
       margin: 0;
       background: #f7f7f7;
     }
+
     header {
       background: #333;
       color: white;
       padding: 20px;
       text-align: center;
     }
+
     nav {
       display: flex;
       justify-content: center;
       background: #444;
     }
+
     nav a {
       color: white;
       padding: 14px 20px;
       text-decoration: none;
       display: block;
     }
+
     nav a:hover {
       background: #666;
     }
+
     .section {
       display: none;
       padding: 20px;
     }
+
     .active {
       display: block;
     }
-    img {
-      margin: 10px;
+
+    /* --- ÉCRAN DE CONNEXION --- */
+    #login-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    #login-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      width: 300px;
+    }
+
+    #login-box input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+    }
+
+    #login-box button {
+      padding: 10px 20px;
+      background: #333;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    #login-box a {
+      display: block;
+      margin-top: 10px;
+      color: #007bff;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
+
+  <!-- ÉCRAN DE CONNEXION -->
+  <div id="login-overlay">
+    <div id="login-box">
+      <h2>Connexion</h2>
+      <input type="text" id="username" placeholder="Identifiant" />
+      <input type="password" id="password" placeholder="Mot de passe" />
+      <button onclick="login()">Se connecter</button>
+
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfL6B_rwDZooJwH4nCYdt1eo3DvAO6-a8IXFm73h0Vw18Dacw/viewform?usp=dialog" target="_blank">Devenir membre</a>
+    </div>
+  </div>
+
   <header>
     <h1>Groupe Chacounette</h1>
   </header>
 
   <nav>
     <a href="#" onclick="showSection('photos')">Photos de Chacounette</a>
-    <a href="#" onclick="showSection('musique')">Musique 🎵</a>
     <a href="#" onclick="showSection('actus')">Actualité</a>
+    <a href="#" onclick="showSection('musique')">Musique</a>
   </nav>
 
-  <!-- Section Photos -->
+  <!-- PHOTOS -->
   <div id="photos" class="section active">
     <h2>Photos de Chacounette</h2>
+
     <img src="D4050099-3DC6-4F4D-8454-06388CCC0060.jpeg" width="300">
     <img src="IMG_0038.jpeg" width="300">
     <img src="IMG_0026.jpeg" width="300">
@@ -63,31 +123,16 @@
     <img src="IMG_0037.jpeg" width="300">
   </div>
 
-  <!-- Section Musique -->
-  <div id="musique" class="section">
-    <h2>Musique de Chacounette</h2>
-    <p>Écoute ici les musiques de Chacounette :</p>
-    <audio controls>
-      <source src="chacounette.mp3" type="audio/mpeg">
-      Ton navigateur ne supporte pas l'audio.
-    </audio>
-  </div>
-
-</div>
-
-  <!-- Section Actualité -->
+  <!-- ACTUALITÉ -->
   <div id="actus" class="section">
     <h2>Actualité</h2>
     <p>Les dernières nouvelles du groupe.</p>
+  </div>
 
-    <!-- Utterances pour les commentaires -->
-    <script src="https://utteranc.es/client.js"
-            repo="mounabelfqih-sketch/groupe-chacounette-comments"
-            issue-term="pathname"
-            theme="github-light"
-            crossorigin="anonymous"
-            async>
-    </script>
+  <!-- MUSIQUE -->
+  <div id="musique" class="section">
+    <h2>Musique de Chacounette</h2>
+    <p>Ici tu pourras ajouter de la musique.</p>
   </div>
 
   <script>
@@ -95,65 +140,25 @@
       document.querySelectorAll('.section').forEach(sec => sec.classList.remove('active'));
       document.getElementById(id).classList.add('active');
     }
+
+    function login() {
+      const user = document.getElementById('username').value;
+      const pass = document.getElementById('password').value;
+
+      // Comptes multiples
+      const comptes = {
+        "chacounette": "1234",
+        "ivann": "1111",
+        "gabriel": "2222",
+        "sylvain": "3333"
+      };
+
+      if (comptes[user] && comptes[user] === pass) {
+        document.getElementById('login-overlay').style.display = 'none';
+      } else {
+        alert("Identifiants incorrects");
+      }
+    }
   </script>
-  <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Groupe Chacounette</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f7f7f7;
-    }
-    header {
-      background: #333;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #444;
-    }
-    nav a {
-      color: white;
-      padding: 14px 20px;
-      text-decoration: none;
-      display: block;
-    }
-    nav a:hover {
-      background: #666;
-    }
-    .section {
-      display: none;
-      padding: 20px;
-    }
-    .active {
-      display: block;
-    }
-  </style>
-</head>
-<body>
-    <div id="login-screen" style="position:fixed; inset:0; background:white; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:20px;">
-        <h2>Connexion requise</h2>
-        <p>Pour accéder au site, veuillez vous connecter.</p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfL6B_rwDZooJwH4nCYdt1eo3DvAO6-a8IXFm73h0Vw18Dacw/viewform?usp=dialog" target="_blank" style="margin-top:20px; padding:10px 20px; background:#007bff; color:white; text-decoration:none; border-radius:5px;">Se connecter</a>
-        <p style="margin-top:20px;">Pas de compte ?</p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfL6B_rwDZooJwH4nCYdt1eo3DvAO6-a8IXFm73h0Vw18Dacw/viewform?usp=dialog" target="_blank" style="padding:10px 20px; background:#28a745; color:white; text-decoration:none; border-radius:5px;">Devenir membre</a>
-    </div>
-
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const logged = params.get('logged');
-
-        if (logged === 'true') {
-            document.getElementById('login-screen').style.display = 'none';
-        }
-    </script>
-
 </body>
 </html>
