Update login credentials in index.html

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
       const user = document.getElementById('username').value;
       const pass = document.getElementById('password').value;
       const comptes = {
-        "chacounette": "1234",
-        "ivann": "1111",
-        "gabriel": "2222",
-        "sylvain": "3333"
+        "chacounette-admin": "9124e",
+        "hgfdjg": "dhgfjgkyt",
+        "xvcv": "reyty",
+        "ertyru": "fcghj"
       };
 
       if (comptes[user] && comptes[user] === pass) {
