Add emojis to navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   </header>
 
   <nav>
-    <a href="#" onclick="showSection('photos')">Photos de Chacounette</a>
-    <a href="#" onclick="showSection('actus')">Actualité</a>
-    <a href="#" onclick="showSection('musique')">Musique</a>
+    <a href="#" onclick="showSection('photos')">Photos de Chacounette😸</a>
+    <a href="#" onclick="showSection('actus')">Actualité📰</a>
+    <a href="#" onclick="showSection('musique')">Musique🎹🎶</a>
   </nav>
 
   <!-- PHOTOS -->
