--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       const pass = document.getElementById('password').value;
       const comptes = {
         "chacounette-admin": "9124e",
-        "hgfdjg": "dhgfjgkyt",
+        "sylauliac48": "DHFGJ456hd",
         "xvcv": "reyty",
         "ertyru": "fcghj"
       };
