Update news paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- ACTUALITÉ -->
   <div id="actus" class="section">
     <h2>Actualité</h2>
-    <p>Les dernières nouvelles du groupe.</p>
+    <p>Le journal du 19 novembre 2025 est disponible!</p>
 
     <!-- Commentaires Utterances -->
     <script src="https://utteranc.es/client.js"
