Add a paragraph about Chacounette

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
   <div id="actus" class="section">
     <h2>Actualité</h2>
+    <p>Vive Chacounette</p>
     <script src="https://utteranc.es/client.js"
       repo="groupe-chacounette/GroupeChacounette"
       issue-term="pathname"
